fix(memory): ground advisor findings in comparable JVM evidence
Preserve unknown observations, reset invalid trends, avoid unsafe arithmetic and unsupported leak, sizing, or residency conclusions. Audit all 36 stable rules against primary JDK documentation and add collector/error/boundary regressions.

Fixes #956

Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>